# godot-rust-template

./: .gitignore  Cargo.toml  README.md  project.godot  root.gdns  root.tscn  rust.gdnlib
src/: lib.rs  root.rs
